--- a/app/src/main/assets/www/index.html
+++ b/app/src/main/assets/www/index.html
@@ -2,20 +2,17 @@
 <html lang="it">
 <head>
   <meta charset="utf-8" />
-  <meta name="viewport" content="width=device-width,initial-scale=1,viewport-fit=cover" />
+  <meta name="viewport" content="width=device-width,initial-scale=1,maximum-scale=1,user-scalable=no" />
   <title>WordStudio</title>
   <style>
     :root{
       --bg:#f3f4f6;
       --surface:#ffffff;
       --stroke:#e5e7eb;
-      --stroke2:#d1d5db;
       --text:#111827;
       --muted:#6b7280;
-      --blue:#2563eb;   /* Word-ish accent */
-      --blue2:#1d4ed8;
+      --blue:#2563eb;
       --shadow: 0 10px 30px rgba(0,0,0,.08);
-      --r:12px;
       --ui: system-ui, -apple-system, Segoe UI, Roboto, Helvetica, Arial;
       --doc: "Calibri","Segoe UI",Roboto,Arial,sans-serif;
     }
@@ -26,13 +23,18 @@
       font-family:var(--ui);
       background:var(--bg);
       color:var(--text);
+      -webkit-tap-highlight-color: transparent;
     }
 
-    /* Top area */
+    /* FIX: header fixed (no sticky), always clickable */
     .top{
-      position:sticky; top:0; z-index:10;
+      position:fixed;
+      left:0; right:0; top:0;
+      z-index:9999;
       background:var(--surface);
       border-bottom:1px solid var(--stroke);
+      pointer-events:auto;
+      transform: translateZ(0); /* stabilizza layer touch su WebView */
     }
     .bar1{
       display:flex;
@@ -41,29 +43,27 @@
       padding:10px 12px;
       max-width:1200px;
       margin:0 auto;
+      flex-wrap:wrap;
     }
-    .brand{
-      display:flex; align-items:center; gap:10px;
-      flex:0 0 auto;
-    }
+    .brand{display:flex; align-items:center; gap:10px; flex:0 0 auto;}
     .logo{
       width:34px; height:34px;
       border-radius:10px;
-      background:linear-gradient(135deg, var(--blue), var(--blue2));
+      background:var(--blue);
       color:#fff;
       display:grid; place-items:center;
       font-weight:900;
     }
-    .title{
-      display:flex; flex-direction:column; line-height:1.05;
-    }
+    .title{display:flex; flex-direction:column; line-height:1.05;}
     .title b{font-size:13px}
     .title small{color:var(--muted); font-weight:700; font-size:11px}
 
     .filebox{
       flex:1 1 auto;
-      display:flex; align-items:center; gap:8px; flex-wrap:wrap;
+      display:flex; align-items:center; gap:8px;
+      flex-wrap:wrap;
       justify-content:flex-end;
+      min-width:260px;
     }
     .filename{
       flex:1 1 220px;
@@ -91,21 +91,13 @@
       align-items:center;
       gap:8px;
       white-space:nowrap;
+      touch-action: manipulation;
+      user-select:none;
     }
     .btn:active{transform:scale(.99)}
-    .btn.primary{
-      background:var(--blue);
-      border-color:var(--blue);
-      color:#fff;
-    }
-    .btn.danger{
-      border-color:#fecaca;
-      background:#fff;
-      color:#b91c1c;
-    }
-    .btn.icon{padding:9px 11px}
+    .btn.primary{background:var(--blue); border-color:var(--blue); color:#fff;}
+    .btn.danger{border-color:#fecaca; background:#fff; color:#b91c1c;}
 
-    /* Ribbon */
     .bar2{
       border-top:1px solid #f3f4f6;
       padding:8px 12px;
@@ -135,6 +127,7 @@
       font-weight:900;
       background:#fff;
       outline:none;
+      touch-action: manipulation;
     }
     input[type="number"]{width:72px; text-align:center}
     input[type="color"]{width:44px; height:40px; padding:4px}
@@ -147,19 +140,30 @@
       cursor:pointer;
       min-width:40px;
       text-align:center;
+      touch-action: manipulation;
+      user-select:none;
     }
     .tool.active{
       border-color: rgba(37,99,235,.55);
       box-shadow: 0 0 0 3px rgba(37,99,235,.12);
     }
 
-    /* Main */
+    /* FIX: space for fixed header */
+    .spacer{
+      height: 136px; /* calcolato per bar1+bar2 su mobile */
+    }
+    @media (min-width: 720px){
+      .spacer{ height: 118px; }
+    }
+
     .main{
       max-width:1200px;
       margin:0 auto;
       padding:14px 12px 22px;
       display:flex;
       justify-content:center;
+      position:relative;
+      z-index:1;
     }
     .paper{
       width:min(900px, 100%);
@@ -183,9 +187,6 @@
       color:#9ca3af;
       font-weight:700;
     }
-    #editor h1{font-size:30px;margin:8px 0 10px;}
-    #editor h2{font-size:22px;margin:8px 0 8px;}
-    #editor p{margin:8px 0;}
 
     .status{
       max-width:1200px;
@@ -198,6 +199,8 @@
       color:var(--muted);
       font-weight:900;
       font-size:12px;
+      position:relative;
+      z-index:1;
     }
     .pill{
       display:inline-flex;
@@ -211,16 +214,17 @@
     .dot{width:8px;height:8px;border-radius:999px;background:#22c55e;}
     .dot.dirty{background:#f59e0b;}
 
-    /* Modal */
+    /* Modal FIX: when hidden it must NOT intercept touches */
     .backdrop{
       position:fixed; inset:0;
       background:rgba(0,0,0,.35);
       display:none;
       align-items:center; justify-content:center;
       padding:14px;
-      z-index:30;
+      z-index:10000;
+      pointer-events:none;
     }
-    .backdrop.show{display:flex}
+    .backdrop.show{display:flex; pointer-events:auto;}
     .modal{
       width:min(640px, 100%);
       background:#fff;
@@ -273,22 +277,17 @@
       cursor:pointer;
     }
     .item:first-child{border-top:0}
-    .item b{font-weight:1000}
-    .item small{color:var(--muted); font-weight:800}
     .item.sel{outline:2px solid rgba(37,99,235,.45); outline-offset:-2px}
 
-    /* Mobile: ribbon scroll */
     @media (max-width: 720px){
-      .filebox{justify-content:flex-start}
       .ribbon{flex-wrap:nowrap; overflow-x:auto; -webkit-overflow-scrolling:touch}
       .ribbon::-webkit-scrollbar{height:0}
       .group{flex-wrap:nowrap; white-space:nowrap}
     }
 
-    /* Print */
     @media print{
       body{background:#fff}
-      .top,.status{display:none !important}
+      .top,.status,.spacer{display:none !important}
       .paper{box-shadow:none;border:none;border-radius:0;padding:0}
       #editor{min-height:auto}
     }
@@ -296,6 +295,7 @@
 </head>
 
 <body>
+
   <div class="top">
     <div class="bar1">
       <div class="brand">
@@ -360,13 +360,16 @@
         </div>
 
         <div class="group">
-          <button class="btn icon" type="button" id="exportDocBtn">DOC</button>
-          <button class="btn icon" type="button" id="exportTxtBtn">TXT</button>
-          <button class="btn icon" type="button" id="exportHtmlBtn">HTML</button>
+          <button class="btn" type="button" id="exportDocBtn">DOC</button>
+          <button class="btn" type="button" id="exportTxtBtn">TXT</button>
+          <button class="btn" type="button" id="exportHtmlBtn">HTML</button>
         </div>
       </div>
     </div>
   </div>
+
+  <!-- FIX spacer -->
+  <div class="spacer"></div>
 
   <div class="main">
     <div class="paper">
@@ -391,9 +394,6 @@
           <label>Nome file</label>
           <input id="saveAsName" maxlength="60" />
         </div>
-        <small style="color:var(--muted);font-weight:800">
-          Questo salva il documento nella libreria interna dell’app (offline).
-        </small>
       </div>
       <div class="mfoot">
         <button class="btn" type="button" id="cancelSaveAs">Annulla</button>
@@ -411,9 +411,6 @@
       </div>
       <div class="mbody">
         <div class="list" id="docsList"></div>
-        <small style="color:var(--muted);font-weight:800">
-          I documenti restano salvati nell’app. Per esportare usa DOC/TXT/HTML.
-        </small>
       </div>
       <div class="mfoot">
         <button class="btn danger" type="button" id="deleteDocBtn">Elimina</button>
@@ -428,6 +425,7 @@
 
   const editor = $("#editor");
   const docName = $("#docName");
+
   const saveBtn = $("#saveBtn");
   const saveAsBtn = $("#saveAsBtn");
   const trashBtn = $("#trashBtn");
@@ -463,13 +461,11 @@
   const openSelectedBtn = $("#openSelectedBtn");
   const deleteDocBtn = $("#deleteDocBtn");
 
-  // ---- Storage model (document library) ----
-  const DB_KEY = "wordstudio_docs_v1";         // { docs: {id: {id,name,html,style,updatedAt}} }
+  const DB_KEY = "wordstudio_docs_v1";
   const CUR_KEY = "wordstudio_current_id_v1";
 
   let currentId = null;
   let selectedOpenId = null;
-  let dirty = false;
   let autosaveT = null;
 
   function nowLabel(){
@@ -500,7 +496,6 @@
   }
 
   function setDirty(v){
-    dirty = v;
     dot.classList.toggle("dirty", !!v);
     saveInfo.textContent = v ? "Modifiche non salvate" : ("Salvato alle " + nowLabel());
   }
@@ -522,16 +517,11 @@
       id: currentId,
       name: normName(docName.value),
       html: editor.innerHTML,
-      style: {
-        font: fontSel.value,
-        size: Number(sizeSel.value || 16),
-        color: colorSel.value
-      },
+      style: { font: fontSel.value, size: Number(sizeSel.value || 16), color: colorSel.value },
       updatedAt: new Date().toISOString()
     };
   }
 
-  // ✅ SALVA SEMPRE (libreria interna)
   function saveLocal(){
     const db = dbLoad();
     if(!currentId){
@@ -546,7 +536,7 @@
 
   function autosave(){
     clearTimeout(autosaveT);
-    autosaveT = setTimeout(() => saveLocal(), 400);
+    autosaveT = setTimeout(saveLocal, 400);
   }
 
   function loadDoc(id){
@@ -573,13 +563,11 @@
     applyEditorBaseStyle();
     const db = dbLoad();
     const cid = localStorage.getItem(CUR_KEY);
-    if(cid && db.docs[cid]){
-      loadDoc(cid);
-      return;
-    }
-    // Create first doc
+    if(cid && db.docs[cid]) { loadDoc(cid); return; }
+
     currentId = uid();
     localStorage.setItem(CUR_KEY, currentId);
+
     db.docs[currentId] = {
       id: currentId,
       name: "Documento",
@@ -591,7 +579,6 @@
     loadDoc(currentId);
   }
 
-  // ---- Commands ----
   function exec(cmd, val=null){
     editor.focus();
     document.execCommand(cmd, false, val);
@@ -600,6 +587,7 @@
     updateStats();
     refreshTools();
   }
+
   function refreshTools(){
     const cmds = ["bold","italic","underline","strikeThrough","justifyLeft","justifyCenter","justifyRight","justifyFull"];
     cmds.forEach(c=>{
@@ -608,7 +596,7 @@
     });
   }
 
-  // ---- Modals ----
+  // Modals
   function openSaveAs(){
     saveAsName.value = normName(docName.value);
     saveAsModal.classList.add("show");
@@ -621,6 +609,10 @@
     openModal.classList.add("show");
   }
   function closeOpenModal(){ openModal.classList.remove("show"); }
+
+  function escapeHtml(s){
+    return String(s).replace(/[&<>"']/g, m => ({ "&":"&amp;","<":"&lt;",">":"&gt;","\"":"&quot;","'":"&#039;" }[m]));
+  }
 
   function renderDocs(){
     const db = dbLoad();
@@ -640,8 +632,7 @@
       it.innerHTML = `<div style="min-width:0">
         <b>${escapeHtml(d.name || "Documento")}</b><br/>
         <small>${new Date(d.updatedAt || Date.now()).toLocaleString()}</small>
-      </div>
-      <div><small>${(d.id||"").slice(-6).toUpperCase()}</small></div>`;
+      </div>`;
       it.addEventListener("click", ()=>{
         [...docsList.querySelectorAll(".item")].forEach(x=>x.classList.remove("sel"));
         it.classList.add("sel");
@@ -651,14 +642,11 @@
     });
   }
 
-  // ---- Export ----
-  // In WebView i blob download a volte non partono: usiamo data: URL.
-  // Se comunque il wrapper blocca download, il documento resta salvato in “Documenti”.
+  // Export via data URL (wrapper may capture)
   function exportDataUrl(mime, ext, content){
     saveLocal();
     const name = normName(docName.value) + "." + ext;
     const url = "data:" + mime + ";charset=utf-8," + encodeURIComponent(content);
-    // forza navigazione -> spesso attiva DownloadListener del wrapper
     const a = document.createElement("a");
     a.href = url;
     a.download = name;
@@ -666,25 +654,26 @@
     a.click();
     a.remove();
   }
-
   function buildHtmlDoc(title){
-    const style = snapshot().style;
+    const st = snapshot().style;
     return `<!doctype html><html><head><meta charset="utf-8"><title>${escapeHtml(title)}</title>
-<style>body{font-family:${escapeCss(style.font)},Calibri,Arial,sans-serif;margin:36px;font-size:${style.size}px;color:#111;}</style>
+<style>body{font-family:${(st.font||"Calibri").replace(/[^a-zA-Z0-9 ,\\-]/g,"")},Calibri,Arial,sans-serif;margin:36px;font-size:${st.size}px;color:#111;}</style>
 </head><body>${editor.innerHTML}</body></html>`;
   }
 
-  function escapeHtml(s){
-    return String(s).replace(/[&<>"']/g, m => ({ "&":"&amp;","<":"&lt;",">":"&gt;","\"":"&quot;","'":"&#039;" }[m]));
-  }
-  function escapeCss(s){
-    // basic safe
-    return String(s || "Calibri").replace(/[^a-zA-Z0-9 ,\-]/g, "");
-  }
-
-  // ---- Wire UI ----
+  // Events: tools
   document.querySelectorAll(".tool[data-cmd]").forEach(b=>{
-    b.addEventListener("click", ()=> exec(b.dataset.cmd));
+    b.addEventListener("click", (e)=>{ e.preventDefault(); exec(b.dataset.cmd); });
+    b.addEventListener("touchend", (e)=>{ e.preventDefault(); exec(b.dataset.cmd); }, {passive:false});
   });
 
-  blockSel.addEventListener
+  blockSel.addEventListener("change", ()=>{ editor.focus(); document.execCommand("formatBlock", false, blockSel.value); setDirty(true); autosave(); });
+
+  fontSel.addEventListener("change", ()=>{ applyEditorBaseStyle(); exec("fontName", fontSel.value); });
+  sizeSel.addEventListener("change", ()=>{ applyEditorBaseStyle(); setDirty(true); autosave(); });
+  colorSel.addEventListener("input", ()=>{ applyEditorBaseStyle(); exec("foreColor", colorSel.value); });
+
+  undoBtn.addEventListener("click", ()=>exec("undo"));
+  redoBtn.addEventListener("click", ()=>exec("redo"));
+
+  // Events: cr
